--- a/app/styles/components/map/c-durationpicker.scss
+++ b/app/styles/components/map/c-durationpicker.scss
@@ -37,6 +37,7 @@
       background-color: rgba($color-1, .9);
       bottom: 27px;
       left: -31px;
+      min-width: 84px;
       padding: 10px 5px;
       position: absolute;
 
